# sadie

./: .bumpversion.cfg  .coverage  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  COERCE_FEATURE.md  Dockerfile  IGBLAST_PARAMETER_ANALYSIS.md  LICENSE  MANIFEST.in  PYTHON_3_13_UPGRADE_SUMMARY.md  README.md  build_and_upload.sh  codecov.yml  environment.yml  img  index.html  input.tgz  install.sh  interactive.py  liable_cats.csv  mkdocs.yml  netlify.toml  pyproject.toml  pyproject_future.toml  pytest.ini  reference.yml  requirements-core.txt  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_docs.txt  sadie.workspace.code-workspace  setup.cfg  setup.py  sitemap.xml  test.py  update_pyproject.sh
.airr_tmp/: tmp1bbked3b.fasta
.github/workflows/: Build-Test.yml  Linux-Build.yml  Linux.yml  MacOSX-Build.yml  MacOSX..yml  MacOSX.yml  anarci-workflow.yml  coverage-local.yml  coverage.yml  docs.yml  mypy.yml  pypi.yml  pyright.yml  pytest-local.yml  pytest.yml  python-package-mac.yml  python-package-stratified.yml  python-package-ubuntu.yml  python-package.yml  test-pypi-sync.yml
advanced_annotation/: index.html
annotation/: index.html
antibody_objects_old/antibody/: antibody.py  chain.py  exception.py  genetable.py  rearrangment.py  segment.py
antibody_objects_old/tests/antibody/: test_antibody_building_blocks.py  test_antibody_genetables.py  test_antibody_objects.py  test_high_level.py
clustering/: index.html
contribute/: index.html
coverage/reports/xml/: coverage.xml
css/: termynal.css
docs/: annotation.md  clustering.md  contribute.md  index.md  models.md  reference.md  renumbering.md  visualization.md
docs/css/: custom.css
docs/docs_output/annotation/: tutorial001.md
docs/docs_src/annotation/: PG9 AIRR.csv  PG9 AIRR.feather  PG9 AIRR.html  PG9 AIRR.json  PG9 AIRR.parquet  PG9 AIRR.tsv  PG9 AIRR.tsv.bz2  PG9 AIRR.xlsx  tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py  tutorial007.py
docs/docs_src/cluster/: hiv_bnabs.feather  tutorial001.py  tutorial002.py
docs/docs_src/object/: tutorial001.py  tutorial002.py  tutorial003.py  tutorial004.py  tutorial005.py  tutorial006.py  tutorial007.py  tutorial008.py  tutorial009.py
docs/docs_src/rearrangment/: tutorial_full.py
docs/docs_src/reference/: human_v.json  reference.yml  tutorial001.py  tutorial002.bash  tutorial002.py  tutorial003.py  tutorial004.py
docs/docs_src/renumbering/: alignment_table.py  alignment_table_no_fxn.py  catnap_aa_heavy_sample_numbering_alignment.csv  catnap_aa_heavy_sample_numbering_segment.csv  multi_use.py  simple_usage.py
docs/js/: termynal.js
docs/overrides/: main.html
docs_output/annotation/tutorial001/: index.html
docs_src/annotation/: tutorial002.py  tutorial004.py  tutorial005.py
docs_src/reference/: reference.yml  tutorial001.py  tutorial002.py  tutorial004.py
examples/: example_coerce_usage.py
js/: custom.js
licenses/: hmmer_license.md
models/: index.html
notebooks/: RefactorRef.ipynb  anarci.ipynb  fasta.ipynb  interactive.py  yaml.ipynb
notebooks/Testing/: Integration.ipynb  Integrationv2.ipynb  InternalTesting.ipynb  Untitled.ipynb  anarci.ipynb
notebooks/airr_c/: GenBank_Annotation.ipynb  SADIE_AIRR_C_2022.pptx  SADIE_DEMO.ipynb  input.tgz  vrc01_heavy.fasta
notebooks/airr_c/input/: OAS_correctable_liable.fasta  OAS_subsample_200.fasta  catnap_nt_heavy_sub.fasta  catnap_nt_light_sub.fasta  reference_slim.yml  vrc01_heavy.fasta  vrc01_light.fasta
notebooks/airr_c/output/: PG9-Antibody_airr.gb  PG9-Antibody_complete.gb  PG9_hmmer.gb
notebooks/tutorials/: airr.ipynb
numbering/: index.html
pibody/airr/: __init__.py  airr.py  app.py  constants.py  genbank.py  util.py
pibody/anarci/: __init__.py  anarci.py  exception.py  numbering.py  result.py
pibody/anarci/aa/: _germlines.py  _schemes.py
pibody/antibody/: __init__.py  genetable.py  levenshtein.py  utility.py
pibody/reference/: aux_file.py  genbank.py  genesegment.py  imgt.py  internal_data.py  settings.py
pibody/utility/: __init__.py
pybody/airr/: airr.py  airrtable.py  igblast.py
pybody/anarci/: __init__.py  anarci.py  exception.py
pybody/anarci/aa/: _anarci.py  _schemes.py
pybody/antibody/: chain.py  segment.py
pybody/licenses/: hmmer_license.md  igblast_license.md
pybody/reference/: blast.py  genbank.py  genesegment.py  igblast_ref.py
pybody/utility/: util.py
recipes/sadie-antibody/: meta.yaml
reference/: index.html
sadie/airr/: __init__.py  airr.py  airrtable.py  app.py  igblast.py  scfv.py  util.py
sadie/anarci/: anarci.py  exception.py  numbering.py  result.py
sadie/anarci/aa/: _schemes.py
sadie/antibody/: antibody.py  chain.py  exception.py  genetable.py  segment.py  utility.py
sadie/reference/: __init__.py  app.py  aux_file.py  genbank.py  genesegment.py  igblast_ref.py  imgt.py  internal_data.py
sadie/reference/data/: IMGT_REFERENCE.db
sadie/utility/: __init__.py
scripts/: act-local.sh  act.sh  build_and_upload.sh  check_mypy.sh  docs.py  edit_imgt_file.pl  generate_reference_yaml.py  prepare_imgt_igblast_db.sh  regenerate_catnap_references.py  regenerate_igl_reference.py  regenerate_linked_igl_reference.py  remake_integration.py  remake_reference_expected_ref.py  remake_unit.py  run_coverage_and_test.sh  run_docs_snippets.bash  submit_to_bioconda.sh  test_only.sh
scripts/act-events/: merged-pr.json  pull-request.json  push-main.json  push-tag.json
search/: search_index.json
src/Bio/: Seq.pyi  SeqRecord.pyi
src/Bio/SeqIO/: AbiIO.pyi  FastaIO.pyi  Interfaces.pyi  QualityIO.pyi  __init__.pyi
src/Bio/SubsMat/: MatrixInfo.pyi  __init__.pyi
src/sadie/: __init__.py  app.py  core.py
src/sadie/airr/: __init__.py  (+7 more)
tests/: conftest.py
tests/airr/: igblast_help.txt  test_airr.py  test_airrtable.py  test_igblast.py
tests/anarci/: test_anarci.py
tests/antibody/: test_antibody_building_blocks.py  test_antibody_genetables.py  test_antibody_objects.py  test_high_level.py
tests/reference/: test_db_creation.py  test_make_igblast_db.py
(+3206 files in other folders)
