[tool.poetry]
name = "sadie-antibody"
version = "0.4.29"
license = "MIT"
description = "\"The Complete Antibody Library\""
authors = [
    "Jordan R. Willis <jwillis0720@gmail.com>",
    "Troy Sincomb <troysincomb@gmail.com>"
]
readme = "README.md"
homepage = "https://sadie.jordanrwillis.com"
repository = "https://github.com/jwillis0720/sadie"
keywords = ["antibody", "bioinformatics", "biology", "computational biology", "protein", "immunoinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
packages = [
    { include = "sadie", from = "src" },
]

[tool.poetry.urls]
issues = "https://github.com/jwillis0720/sadie/issues"

[tool.poetry.scripts]
sadie = "sadie.app:sadie"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
biopython = ">=1.79"
click = ">=7.0"
filetype = "^1.1.0"
pandas = ">=1.0,<1.5.0"
requests = "^2.28.1"
pydantic = ">=1.9.0,<2.0.0"
python-Levenshtein = "^0.20.5"
pyarrow = ">=6.0.1"
semantic-version = "^2.10.0"
PyYAML = "^6.0"
pyhmmer = ">=0.5.0"
scikit-learn = "^1.1.2"
openpyxl = "^3.0.10"
yarl = "^1.8.1"
ipython = "^8.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.0"
flake8 = "4.0.1"
pylint = "2.12.2"
pre-commit = "2.16.0"
coverage = "6.2"
airr = ">=1.4.0"
black = "22.3.0"
pyinstrument = "^4.3.0"
mdx-include = "1.4.1"
types-PyYAML = "^6.0.12"
pandas-stubs = "^1.5.0.221003"
types-requests = "^2.28.11.1"
mkdocs-material = "8.1.3"
mkdocs-material-extensions = "1.0.3"
mkdocs-git-revision-date-plugin = "0.3.1"
mkdocs-redirects = "1.0.3"
mkdocs = "1.2.3"
markdown-include = "0.6.0"
Jinja2 = "3.0.3"
mypy = "^0.982"
bump2version = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------ External Tools ------------------------------------------------ #

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  | tests/
  | coverage/
  | profiling/
)/
'''

[tool.flake8]
defaultsignore = "B008"

[tool."pylint.MASTER"]
extension-pkg-whitelist = "pydantic"

[tool.coverage.html]
directory = "coverage/reports/html/"

[tool.coverage.xml]
output = "coverage/reports/xml/coverage.xml"

[tool.mypy]
plugins = ["pydantic.mypy"]
# these are explicit strict defs
disallow_any_generics = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
follow_imports = "silent"
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["semantic_version.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["filetype.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["Levenshtein.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sadie.airr.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sadie.cluster.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sadie.reference.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sadie.renumbering.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sadie.antibody.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sadie.numbering.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["Bio.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[tool.pydantic-mypy] # https://pydantic-docs.helpmanual.io/mypy_plugin/#enabling-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
