[metadata]
name = sadie-antibody
description = The Complete Antibody Library
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan R. Willis
author_email = "Jordan R. Willis" <jwillis0720@gmai.com>
license = MIT
version = 0.3.8
license_file = LICENSE
platforms = any
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: MacOS
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering
project_urls =
	Bug Tracker = https://github.com/jwillis0720/sadie/issues
	Source Code = https://github.com/jwillis0720/sadie.git

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False
package_dir=
    =src
py_modules= airr, anarci, antibody, reference, utility
install_requires =
	biopython
	click >= 7.0
	filetype
	pandas >= 1.0
	wheel
	requests
	python-levenshtein
	pyarrow
	semantic_version
	PyYAML
	pydantic

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sadie = sadie.app:sadie

[options.extras_require]
dev=
	jupyter
	flake8
	pylint
	pre-commit
	pytest_cov
	ipykernel
	black
	nb-black
	mkdocs-material
	mkdocs-redirects
	mkdocs
	markdown-include
	typer
	mkdocs-git-revision-date-plugin
	bump2version


[bumpversion:file:.bump2version.cfg]

[flake8]
defaultsignore = B008
