[metadata]
name = sadie_antibody
version = 0.3.19
description = The Complete Antibody Library
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan R. Willis
author_email = "Jordan R. Willis" <jwillis0720@gmai.com>
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/jwillis0720/sadie/issues
    Source Code = https://github.com/jwillis0720/sadie.git

[options]
packages = find:
py_modules = airr, anarci, antibody, reference, utility, cluster
install_requires =
    PyYAML
    biopython
    click>=7.0
    filetype
    pandas>=1.0
    pyarrow
    pydantic
    python-levenshtein
    requests
    semantic_version
    sklearn
    wheel
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sadie = sadie.app:sadie

[options.extras_require]
dev =
    black
    bump2version
    coverage
    flake8
    ipykernel
    jupyter
    markdown-include
    mkdocs
    mkdocs-git-revision-date-plugin
    mkdocs-material
    mkdocs-redirects
    nb-black
    pre-commit
    pylint
    pytest-xdist
    typer

[flake8]
defaultsignore = B008

[pylint.MASTER]
extension-pkg-whitelist = pydantic

[coverage:run]
omit =
    src/sadie/anarci/aa/*

[coverage:html]
directory = coverage/reports/html/

[coverage:xml]
output = coverage/reports/xml/coverage.xml
