[metadata]
name = sadie-antibody
description = The Complete Antibody Library
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan R. Willis
author_email = "Jordan R. Willis" <jwillis0720@gmai.com>
license = MIT
version = 0.4.9
license_file = LICENSE
platforms = any
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: MacOS
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
project_urls =
	Bug Tracker = https://github.com/jwillis0720/sadie/issues
	Source Code = https://github.com/jwillis0720/sadie.git

[options]
packages = find:
python_requires = >=3.7.0, <3.20.0
include_package_data = True
zip_safe = False
package_dir=
    =src
py_modules= airr, anarci, antibody, reference, utility, cluster
install_requires =
	biopython >= 1.79
	click >= 7.0
	filetype
	pandas >= 1.0 , < 1.5.0
	wheel
	requests
	pydantic
	python-levenshtein
	pyarrow >= 6.0.1
	semantic_version
	PyYAML
	pyhmmer >= 0.5.0
	pydantic==1.9.0
	sklearn
	openpyxl
    yarl

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sadie = sadie.app:sadie

[options.extras_require]
dev=
	flake8==4.0.1
	pylint==2.12.2
	pre-commit==2.16.0
	coverage==6.2
	pytest
	airr
	black==22.3.0
	pyinstrument
	bump2version==1.0.1
	mdx-include>=1.4.1
	mypy==0.941
	types-PyYAML
	pandas-stubs
	types-requests
	mkdocs-material==8.1.3
	mkdocs-material-extensions==1.0.3
	mkdocs-git-revision-date-plugin==0.3.1
	mkdocs-redirects==1.0.3
	mkdocs==1.2.3
	markdown-include==0.6.0
	mdx-include==1.4.1
	jinja2==3.0.3 # https://forums.docker.com/t/jinja-mkdocs-issue-breaks-docker101tutorial/122671
	mypy==0.941
  pytest>=7.1.0
[bumpversion:file:.bump2version.cfg]

[flake8]
defaultsignore = B008

[pylint.MASTER]
extension-pkg-whitelist=pydantic

[coverage:run]
omit =
    src/sadie/anarci/aa/*

[coverage:html]
directory = coverage/reports/html/

[coverage:xml]
output = coverage/reports/xml/coverage.xml

[mypy]
plugins = pydantic.mypy

# these are explicit strict defs
disallow_any_generics = True
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls =True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores=True
warn_return_any = True
no_implicit_reexport=True
strict_equality = True
follow_imports = silent
pretty = True
show_error_codes=True


[pydantic-mypy] # https://pydantic-docs.helpmanual.io/mypy_plugin/#enabling-the-plugin
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy-Bio.*]
ignore_missing_imports = True

[mypy-semantic_version.*]
ignore_missing_imports = True

[mypy-filetype.*]
ignore_missing_imports = True

[mypy-Levenshtein.*]
ignore_missing_imports = True

[mypy-sadie.anarci.*]
ignore_errors = True

[mypy-sadie.antibody.*]
ignore_errors = True

[mypy-sklearn.*]
ignore_missing_imports = True
